[tool.poetry]
name = "godot-wsl-proxy"
version = "0.1.0"
description = ""
authors = ["zibertscrem <zibertscrem@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "~8.1.8"

[tool.poetry.scripts]
godot-wsl-proxy = "godot_wsl_proxy.cli:cli"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
