[tool.poetry]
name = "godot-wsl-proxy"
version = "0.2.0"
description = "LSP proxy to work from editor located in WSL and Godot located in Windows seemlessly"
license = "MIT"
repository = "https://github.com/venomlab/godot-wsl-proxy"
authors = ["Dmytro Selishchev <zibertscrem@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "~8.1.8"

[tool.poetry.scripts]
godot-wsl-proxy = "godot_wsl_proxy.cli:cli"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
